# universal-turing-machine-simulator

./: CMakeLists.txt  README.md  banda.cpp  banda.h  exchange.utm  exchange_intrare.txt  main.cpp  masinaturinguniversala.cpp  masinaturinguniversala.h  stare.cpp  stare.h  trecere.cpp  trecere.h  uturingmachine.cpp  uturingmachine.h  uturingmachine.kdev4
.kdev4/: uturingmachine.kdev4
